# cv-score-predict

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cv_score_predict/: __init__.py  core.py
tests/: test_categorical_handling.py  test_cv_score_predict.py  test_prediction_structures_and_modes.py  test_regression_no_processor_binary_output.py
