[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-score-predict"
version = "0.1.8"
description = "Cross-validated ensemble prediction with LGBM, XGBoost, and CatBoost — with safe categorical handling, multi-seed averaging, and artifact return."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Danu ANDRIES", email = "danu@andries.lu" },
]
classifiers = [
    "Programming Language :: Python :: 3", 
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence", 
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.4", 
    "lightgbm>=3.3",
    "xgboost>=1.7",
    "catboost>=1.2"
]

keywords = [
    "cross-validation",
    "ensemble learning",
    "model averaging",
    "LightGBM",
    "XGBoost",
    "CatBoost",
    "categorical encoding",
    "OrdinalEncoder",
    "out-of-fold prediction",
    "OOF",
    "multi-seed CV",
    "repeated cross-validation",
    "early stopping",
    "scikit-learn compatible",
    "pandas",
    "machine learning",
    "classification",
    "regression",
    "model validation",
    "kaggle",
    "safe preprocessing",
    "data leakage prevention",
    "boosting ensemble"
]
[tool.setuptools.packages.find]
exclude = ["tests*", "notebooks*", "temp*", "scripts*", "*catboost*"]

[project.urls]
Homepage = "https://github.com/Karabush/cv-score-predict"
Repository = "https://github.com/Karabush/cv-score-predict"
Documentation = "https://github.com/Karabush/cv-score-predict#readme"